--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "autoprefixer": "^10.4.10",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8"
+  },
+  "dependencies": {
+    "phosphor-react": "^1.4.1"
   }
 }
